[gd_scene load_steps=6 format=2]

[ext_resource path="res://intro/script/scores.gd" type="Script" id=1]
[ext_resource path="res://Fonts/Kenney Mini Square.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://intro/picture/close.png" type="Texture" id=3]
[ext_resource path="res://intro/saving_file.tscn" type="PackedScene" id=4]

[sub_resource type="DynamicFont" id=1]
size = 10
font_data = ExtResource( 2 )

[node name="scores" type="Panel"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="pre" type="Label" parent="."]
modulate = Color( 0.984314, 0.882353, 0.0117647, 1 )
margin_left = 31.0
margin_top = 21.0
margin_right = 125.0
margin_bottom = 34.0
custom_fonts/font = SubResource( 1 )
text = "Pre - Test Score: "
align = 1
valign = 1

[node name="pre_value" type="Label" parent="."]
modulate = Color( 0.0588235, 0.929412, 0.94902, 1 )
margin_left = 20.0
margin_top = 95.0
margin_right = 114.0
margin_bottom = 108.0
custom_fonts/font = SubResource( 1 )
text = "30"
align = 1
valign = 1

[node name="post" type="Label" parent="."]
modulate = Color( 0.984314, 0.882353, 0.0117647, 1 )
margin_left = 174.0
margin_top = 21.0
margin_right = 268.0
margin_bottom = 34.0
custom_fonts/font = SubResource( 1 )
text = "Post - Test Score: "
align = 1
valign = 1

[node name="post_value" type="Label" parent="."]
modulate = Color( 0.0588235, 0.929412, 0.94902, 1 )
margin_left = 167.0
margin_top = 94.0
margin_right = 261.0
margin_bottom = 107.0
custom_fonts/font = SubResource( 1 )
text = "30"
align = 1
valign = 1

[node name="NRI" type="Label" parent="."]
modulate = Color( 0.984314, 0.882353, 0.0117647, 1 )
margin_left = 101.0
margin_top = 117.0
margin_right = 195.0
margin_bottom = 130.0
custom_fonts/font = SubResource( 1 )
text = "NRI:"
align = 1
valign = 1

[node name="NRI_value" type="Label" parent="."]
modulate = Color( 0.0588235, 0.929412, 0.94902, 1 )
margin_left = 102.0
margin_top = 137.0
margin_right = 196.0
margin_bottom = 150.0
custom_fonts/font = SubResource( 1 )
text = "40%"
align = 1
valign = 1

[node name="close_button" type="TextureButton" parent="."]
margin_left = 300.0
margin_top = 6.0
margin_right = 315.0
margin_bottom = 20.0
texture_normal = ExtResource( 3 )

[node name="saving_file" parent="." instance=ExtResource( 4 )]

[node name="module1" type="Label" parent="."]
modulate = Color( 0.984314, 0.882353, 0.0117647, 1 )
margin_left = -16.0
margin_top = 38.0
margin_right = 78.0
margin_bottom = 51.0
custom_fonts/font = SubResource( 1 )
text = "m1"
align = 1
valign = 1

[node name="module2" type="Label" parent="."]
modulate = Color( 0.984314, 0.882353, 0.0117647, 1 )
margin_left = -16.0
margin_top = 52.0
margin_right = 78.0
margin_bottom = 65.0
custom_fonts/font = SubResource( 1 )
text = "m2"
align = 1
valign = 1

[node name="module3" type="Label" parent="."]
modulate = Color( 0.984314, 0.882353, 0.0117647, 1 )
margin_left = -16.0
margin_top = 65.0
margin_right = 78.0
margin_bottom = 78.0
custom_fonts/font = SubResource( 1 )
text = "m3"
align = 1
valign = 1

[node name="module4" type="Label" parent="."]
modulate = Color( 0.984314, 0.882353, 0.0117647, 1 )
margin_left = -16.0
margin_top = 78.0
margin_right = 78.0
margin_bottom = 91.0
custom_fonts/font = SubResource( 1 )
text = "m4"
align = 1
valign = 1

[node name="module5" type="Label" parent="."]
modulate = Color( 0.984314, 0.882353, 0.0117647, 1 )
margin_left = 126.0
margin_top = 40.0
margin_right = 220.0
margin_bottom = 53.0
custom_fonts/font = SubResource( 1 )
text = "m1"
align = 1
valign = 1

[node name="module6" type="Label" parent="."]
modulate = Color( 0.984314, 0.882353, 0.0117647, 1 )
margin_left = 126.0
margin_top = 53.0
margin_right = 220.0
margin_bottom = 66.0
custom_fonts/font = SubResource( 1 )
text = "m2"
align = 1
valign = 1

[node name="module7" type="Label" parent="."]
modulate = Color( 0.984314, 0.882353, 0.0117647, 1 )
margin_left = 126.0
margin_top = 65.0
margin_right = 220.0
margin_bottom = 78.0
custom_fonts/font = SubResource( 1 )
text = "m3"
align = 1
valign = 1

[node name="module8" type="Label" parent="."]
modulate = Color( 0.984314, 0.882353, 0.0117647, 1 )
margin_left = 126.0
margin_top = 78.0
margin_right = 220.0
margin_bottom = 91.0
custom_fonts/font = SubResource( 1 )
text = "m4"
align = 1
valign = 1

[node name="prm1" type="Label" parent="."]
modulate = Color( 0.0588235, 0.929412, 0.94902, 1 )
margin_left = 20.0
margin_top = 39.0
margin_right = 114.0
margin_bottom = 52.0
custom_fonts/font = SubResource( 1 )
text = "30"
align = 1
valign = 1

[node name="prm2" type="Label" parent="."]
modulate = Color( 0.0588235, 0.929412, 0.94902, 1 )
margin_left = 20.0
margin_top = 52.0
margin_right = 114.0
margin_bottom = 65.0
custom_fonts/font = SubResource( 1 )
text = "30"
align = 1
valign = 1

[node name="prm3" type="Label" parent="."]
modulate = Color( 0.0588235, 0.929412, 0.94902, 1 )
margin_left = 20.0
margin_top = 66.0
margin_right = 114.0
margin_bottom = 79.0
custom_fonts/font = SubResource( 1 )
text = "30"
align = 1
valign = 1

[node name="prm4" type="Label" parent="."]
modulate = Color( 0.0588235, 0.929412, 0.94902, 1 )
margin_left = 20.0
margin_top = 78.0
margin_right = 114.0
margin_bottom = 91.0
custom_fonts/font = SubResource( 1 )
text = "30"
align = 1
valign = 1

[node name="ptm1" type="Label" parent="."]
modulate = Color( 0.0588235, 0.929412, 0.94902, 1 )
margin_left = 167.0
margin_top = 41.0
margin_right = 261.0
margin_bottom = 54.0
custom_fonts/font = SubResource( 1 )
text = "30"
align = 1
valign = 1

[node name="ptm2" type="Label" parent="."]
modulate = Color( 0.0588235, 0.929412, 0.94902, 1 )
margin_left = 167.0
margin_top = 53.0
margin_right = 261.0
margin_bottom = 66.0
custom_fonts/font = SubResource( 1 )
text = "30"
align = 1
valign = 1

[node name="ptm3" type="Label" parent="."]
modulate = Color( 0.0588235, 0.929412, 0.94902, 1 )
margin_left = 167.0
margin_top = 66.0
margin_right = 261.0
margin_bottom = 79.0
custom_fonts/font = SubResource( 1 )
text = "30"
align = 1
valign = 1

[node name="ptm4" type="Label" parent="."]
modulate = Color( 0.0588235, 0.929412, 0.94902, 1 )
margin_left = 167.0
margin_top = 78.0
margin_right = 261.0
margin_bottom = 91.0
custom_fonts/font = SubResource( 1 )
text = "30"
align = 1
valign = 1

[connection signal="pressed" from="close_button" to="." method="_on_close_button_pressed"]
